Fixing some alignment

--- a/src/css/modules/box.scss
+++ b/src/css/modules/box.scss
@@ -4,6 +4,8 @@
     width: 70%;
     height: 100%;
     justify-content: center;
+    align-items: center;
+    align-content: center;
     background-color: #ffffff;
     box-shadow: 0px 0px 15px black;
 
